# demo-fastapi

./: Dockerfile  pyproject.toml  readme.md
app/: __init__.py  main.py  settings.py
app/api/: __init__.py  api_test.py
app/utils/: __init__.py  utils_log.py
tests/: __init__.py
