[tool.poetry]
name = "forminformationextraction"
version = "0.1.0"
description = ""
authors = ["zhujinchong <mingriyingying@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
pydantic = "^2.10.4"
openai = "^1.58.1"
jionlp = "^1.5.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
